[workspace]
members = ["primitives", "lyquid", "lyquid/proc"]
exclude = ["lyquid-template"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.3.0"
homepage = "https://lyquor.xyz/"
repository = "https://github.com/lyquor-labs/ldk"
license = "Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(rust_analyzer)'] }

[workspace.lints.clippy]
# Always-deny footguns (zero occurrences today; these are regression guards).
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
rc_mutex = "deny"
mutex_atomic = "deny"
lossy_float_literal = "deny"
float_cmp_const = "deny"
empty_drop = "deny"
string_add = "deny"
wildcard_dependencies = "deny"
# Style/perf cleanups kept clippy-clean (CI gates on `-D warnings`, so `warn` is
# blocking in CI; promote to `deny` if you want the same failure locally).
uninlined_format_args = "warn"
use_self = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
redundant_closure_for_method_calls = "warn"
redundant_clone = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
match_same_arms = "warn"
or_fun_call = "warn"
manual_string_new = "warn"
needless_continue = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
range_plus_one = "warn"
stable_sort_primitive = "warn"
unnested_or_patterns = "warn"
bool_to_int_with_if = "warn"
collapsible_else_if = "warn"
from_iter_instead_of_collect = "warn"

[workspace.dependencies]
alloy-sol-types = { version = "1.6", default-features = false }
bytes = "1.11"
hashbrown = { version = "0.17", default-features = false }
lyquid-proc = { path = "lyquid/proc", version = "=0.3.0" }
lyquor-primitives = { path = "primitives", version = "0.3.0" }
proc-macro2 = "1.0.106"
quote = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.11", default-features = false }
syn = "2.0"
thiserror = "2.0"
typed-builder = "0.23"
