[package]
name = "bartender"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyquid = { path = "../lyquid", features = ["ldk"] }
serde = { version = "1.0.217", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = "debuginfo"
debug = false
lto = true

[workspace]
