[package]
name = "lyquid"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "Lyquid Development Kit (LDK)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { optional = true, version = "0.8.12", features = ["no-rng"], default-features = false }
alloy-sol-types.workspace = true
hashbrown = { workspace = true, optional = true, features = ["serde"] }                          # features used to be for allocator
lyquid-proc = { version = "0.0.1", optional = true, path = "./proc" }
lyquor-primitives = { workspace = true }
serde = { workspace = true }
talc = { optional = true, version = "5.0.3", default-features = false }                          # features = ["allocator"] # features used to be for Allocator
thiserror.workspace = true

[features]
default = []
ldk = ["lyquid-proc", "talc", "hashbrown", "ahash"]

[lints]
workspace = true
