[package]
name = "lyquor-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "The primitive types for Lyquor platform."

[dependencies]
alkahest = { version = "0.3.0", features = ["bincoded"] }
alloy-primitives = { version = "1.5", features = ["serde", "map"], default-features = false }
base32 = "0.5.1"
blake3 = { version = "1.8.2", default-features = false }
bytes = { workspace = true }
cb58 = "0.0.2"
ed25519-compact = { workspace = true }
serde = { workspace = true }
sha3 = { version = "0.10", default-features = false }
typed-builder.workspace = true
