[package]
name = "lyquor-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "The primitive types for Lyquor platform."

[dependencies]
alloy-primitives = { version = "1.5", features = ["serde", "map"], default-features = false }
alloy-sol-types.workspace = true
base32 = "0.5.1"
blake3 = { version = "1.8.2", default-features = false }
bytes = { workspace = true }
cb58 = "0.0.2"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
serde = { workspace = true }
sha2 = { version = "0.10", default-features = false }
typed-builder.workspace = true

[dev-dependencies]
ed25519-compact = { workspace = true }
