[package]
name = "lyquid-proc"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
homepage = "https://lyquor.xyz/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyquor-primitives = { workspace = true }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lib]
proc-macro = true
